# SEC_LABO1

treasurehunt/: Cargo.toml
treasurehunt/src/: board.rs  command.rs  input_handler.rs  main.rs  map.rs  player.rs  player_command.rs  player_input_handler.rs  tile.rs  utils.rs
treasurehunt/src/game/: command.rs  engine.rs  errors.rs
treasurehunt/src/game/input/: handlers.rs  semantic_check.rs  syntatic_check.rs
treasurehunt/src/game/objects/: map.rs  player.rs
