[package]
name = "treasurehunt"
version = "0.1.0"
authors = ["Doran Kayoumi <dorankayoumi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termcolor = "1.1"
rand = "0.8.0"
regex = "1"
read_input = "0.8"
lazy_static = "1.4.0"